[package]
name = "hellsprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
atty = "0.2.14"
binrw = "0.11.2"
camino = "1.1.4"
clap = { version = "4.3.0", features = ["derive"] }
image = { version = "0.24", default_features = false, features = ["png"] }
log = "0.4.17"
memmap2 = "0.6.2"
simplelog = "0.12.1"
